# zig-codeblocks

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
examples/: riiz.md
src/: format.rs  lib.rs  parse.rs  style.rs
src/zig_codeblocks/: __init__.py  __main__.py  _core.pyi  consts.py  formatting.py  parsing.py  styling.py
tests/: test_formatting.py  test_parsing.py  test_styling.py
tests/sources/formatting_results/: assign_undefined.json  comments.json  emoji.json  global_assembly.json  hello_again.json  identifiers.json
tests/sources/parsing_results/: assign_undefined.json  comments.json  emoji.json  global_assembly.json  hello_again.json  identifiers.json
tests/sources/spacing/: early_start.md  no_gap.md  squished.md  squished_no_gap.md  standard.md  triple_in_double_inline.md
tests/sources/zig_inputs/: emoji.zig  global_assembly.zig
tests/sources/zig_parsing/: identifiers.zig  result_comments.json
