[package]
name = "zig_codeblocks"
version = "0.3.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39"] }
regex = "1.11.1"
tree-sitter = "0.25.3"
tree-sitter-zig = "1.1.2"

[dev-dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
