[project]
name = "zig-codeblocks"
version = "0.2.2"
description = "Zig ANSI syntax highlighting library"
readme = "README.md"
license = "MIT"
authors = [{ name = "trag1c", email = "trag1cdev@yahoo.com" }]
requires-python = ">=3.10"
dependencies = ["tree-sitter~=0.24.0", "tree-sitter-zig>=1.1.2,<2"]

[project.urls]
repository = "https://github.com/trag1c/zig-codeblocks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.9.4"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM",
    "D",
    "FIX",
    "ANN401",
    "ISC001",
    "T201",
    "TD003",
    "PLR2004",
    "S105",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]
